--- a/style.css
+++ b/style.css
@@ -11,17 +11,26 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    position: relative;
+}
+
+.modal-bg {
+    position: fixed;
+    display: none;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.401);
 }
 
 .modal {
     border: 1px solid black;
+    border-radius: 3px;
     width: clamp(240px, 75%, 400px);
-    position: absolute;
-    top: 20%;
-    align-self: center;
+    margin: 20vh auto;
     background: white;
     padding: 5px;
+    box-shadow: 1px 1px 3px 0px #5d4b4b;
+
 }
 
 .text-input{
