--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .modal-bg {
     position: fixed;
     display: none;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.401);
@@ -56,6 +56,8 @@ body {
     flex-wrap: wrap;
     height: 10%;
     background-color: var(--bg-color);
+    box-shadow: 0 0 4px 0 #5d4b4b;
+    z-index: 1;
 }
 
 .logo {
