--- a/style.css
+++ b/style.css
@@ -30,7 +30,19 @@ body {
     background: white;
     padding: 5px;
     box-shadow: 1px 1px 3px 0px #5d4b4b;
+}
 
+.scale {
+    animation: scale 0.1s ease;
+}
+
+@keyframes scale {
+    from {
+        transform: scale(0.5);
+    }
+    to {
+        transform: scale(1);
+    }
 }
 
 .text-input{
@@ -56,7 +68,7 @@ body {
     flex-wrap: wrap;
     height: 10%;
     background-color: var(--bg-color);
-    box-shadow: 0 0 4px 0 #5d4b4b;
+    box-shadow: 0 0 4px 0 #728ca6;
     z-index: 1;
 }
 
@@ -95,13 +107,10 @@ body {
 }
 
 button.add {
+    transform: scale(.5);
     height: 50%;
     position: relative;
     bottom: 40px;
     font-size: 40px;
-    line-height: 11px;
-    background: linear-gradient(blue, red);
-    color: rgb(0, 255, 166);
-    border-radius: 3px;
-    padding: 12px;
+    border: none;
 }
