--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     background: white;
     padding: 5px;
     box-shadow: 1px 1px 3px 0px #5d4b4b;
+    background-color: var(--bg-color);
 }
 
 .scale {
@@ -86,6 +87,7 @@ body {
     flex: 1;
     overflow: scroll;
     background-color: var(--bg-color);
+    margin-bottom: 8px;
 }
 
 .book {
@@ -106,11 +108,8 @@ body {
     box-shadow: 0px -20px 20px 0px var(--bg-color);
 }
 
-button.add {
-    transform: scale(.5);
-    height: 50%;
+.add {
+    transform: scale(0.5);
     position: relative;
-    bottom: 40px;
-    font-size: 40px;
-    border: none;
+    bottom: 10px;
 }
