--- a/style.css
+++ b/style.css
@@ -101,33 +101,31 @@ button {
     background: linear-gradient(to right bottom,white, rgb(123, 255, 0) 70%, rgb(0, 255, 247) 90%);
     border-radius: 3px;
     box-shadow: 1px 1px 3px 0px #5d4b4b;
+    padding: 5px 5px 1px 5px;
 }
 
 .buttons-wrapper {
     display: flex;
     justify-content: space-evenly;
+    height: 30px;
 }
 
 .book-buttons {
     width: clamp(86px, 30%, 120px);
     padding: 4px;
     border-radius: 4px;
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 14px;
-    transition: 1s ease;
-}
-
-.read {
-    background-color: lightgreen;
-    color: green;
-    border: 3px solid rgb(119, 201, 119);
-    box-shadow: inset darkgreen;
+    color: #69ca43;
+    transition: 0.3s ;
+    background: none;
+    border: none;
 }
 
 .read:hover {
-    background-color: rgb(118, 197, 118);
+    background-color: lightgreen;
     color: green;
-    border: 3px solid rgb(94, 160, 94);
+    border: 2px solid rgb(119, 201, 119);
 }
 
 .unread {
@@ -135,16 +133,10 @@ button {
     color: darkred;
 }
 
-.remove {
-    background-color: lightgray;
-    color: rgb(137, 137, 137);
-    border: 3px solid rgb(200, 199, 199);
-}
-
 .remove:hover {
     background-color: rgb(210, 169, 169);
     color: rgb(164, 71, 71);
-    border: 3px solid rgb(201, 149, 149);
+    border: 2px solid rgb(201, 149, 149);
 }
 
 .footer {
