--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ button {
 
 .modal-bg {
     position: fixed;
-    display: none;
+    /* display: none; */
     z-index: 2;
     width: 100%;
     height: 100%;
@@ -51,8 +51,32 @@ button {
     }
 }
 
+input[type='text'],
+input[type='number'] {
+    height: 20px;
+}
+
+input[type='radio'] {
+    transform: scale(1.3);
+}
+
+input[type='radio'] {
+    cursor: pointer;
+}
+
 .text-input{
     display: grid;
+}
+
+.submit-book {
+    height: 26px;
+    background-color: #bdfbbd;
+    border-radius: 3px;
+    border: 2px solid #5ab590;
+}
+
+.submit-book:hover {
+    background-color: #b8f4b8;
 }
 
 .radio {
@@ -117,7 +141,6 @@ button {
     font-weight: bold;
     font-size: 14px;
     color: #69ca43;
-    /* transition: 0.3s ; */
     background: none;
     border: none;
 }
