--- a/style.css
+++ b/style.css
@@ -223,3 +223,10 @@ input[type='radio'] {
     bottom: 10px;
     cursor: pointer;
 }
+
+@media only screen and (min-width: 768px) {
+    .wrapper {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+}
