--- a/style.css
+++ b/style.css
@@ -1,232 +1,261 @@
 :root {
-    --bg-color: rgb(215, 245, 243);
-    box-sizing: border-box;
+  --bg-color: rgb(215, 245, 243);
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .modal-bg {
-    position: fixed;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.401);
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.401);
 }
 
 .modal {
-    border: 1px solid black;
-    border-radius: 3px;
-    width: clamp(240px, 75%, 400px);
-    margin: 20vh auto;
-    background: white;
-    padding: 5px;
-    box-shadow: 1px 1px 3px 0px #5d4b4b;
-    background-color: var(--bg-color);
+  border: 1px solid black;
+  border-radius: 3px;
+  width: clamp(240px, 75%, 400px);
+  margin: 20vh auto;
+  background: white;
+  padding: 5px;
+  box-shadow: 1px 1px 3px 0px #5d4b4b;
+  background-color: var(--bg-color);
 }
 
 .scale {
-    animation: scale 0.1s ease;
+  animation: scale 0.1s ease;
 }
 
 @keyframes scale {
-    from {
-        transform: scale(0.5);
-    }
-    to {
-        transform: scale(1);
-    }
+  from {
+    transform: scale(0.5);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 input[type='text'],
 input[type='number'] {
-    height: 20px;
+  height: 20px;
 }
 
 input[type='radio'] {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 input[type='radio'] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .text-input{
-    display: grid;
+  display: grid;
 }
 
 .submit-book {
-    height: 26px;
-    background-color: #bdfbbd;
-    border-radius: 3px;
-    border: 1px solid #5ab590;
+  height: 26px;
+  background-color: #bdfbbd;
+  border-radius: 3px;
+  border: 1px solid #5ab590;
 }
 
 .submit-book:hover {
-    background-color: #b8f4b8;
+  background-color: #b8f4b8;
 }
 
 .radio {
-    margin-left: 15px;
-    display: flex;
-    gap: 15px;
+  margin-left: 15px;
+  display: flex;
+  gap: 15px;
 }
 
 .submit-book {
-    display: block;
-    margin: 0 auto;
-    width: 100px;
+  display: block;
+  margin: 0 auto;
+  width: 100px;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    height: 10%;
-    background-color: var(--bg-color);
-    box-shadow: 0 0 4px 0 #728ca6;
-    z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 10%;
+  background-color: var(--bg-color);
+  box-shadow: 0 0 4px 0 #728ca6;
+  z-index: 1;
 }
 
 .logo {
-    font-size: 48px;
-    font-weight: bolder;
-    margin-left: 5px;
+  font-size: 48px;
+  font-weight: bolder;
+  margin-left: 5px;
 }
 
 .stats-toggle {
-    /* position: relative;
-    top: 10px; */
-    margin-right: 5px;
-    background: none;
-    border: none;
+  height: 25px;
+  width: 25px;
+  margin-right: 20px;
+  border: none;
+}
+
+.chart {
+  background: url(/icons/chart-box-outline.png);
+  background-size: contain;
+}
+
+.shelf {
+  background: url(/icons/book-open-variant.png);
+  background-size: contain;
 }
 
 .bookshelf {
-    flex: 1;
-    overflow: scroll;
-    background-color: var(--bg-color);
-    margin-bottom: 8px;
+  flex: 1;
+  overflow: scroll;
+  background-color: var(--bg-color);
+  margin-bottom: 8px;
 }
 
 .stats {
-    flex: 1;
-    background-color: var(--bg-color);
+  flex: 1;
+  background-color: var(--bg-color);
 }
 
 .stats-wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
 }
 
 .stat-number {
-    color: orange;
-    font-weight: bolder;
-    margin-left: 5px;
+  color: orange;
+  font-weight: bolder;
+  margin-left: 5px;
 }
 
 .book {
-    border: 1px solid rgb(0, 255, 247);
-    margin: 15px;
-    background: linear-gradient(to right bottom,white, rgb(123, 255, 0) 70%, rgb(0, 255, 247) 90%);
-    border-radius: 3px;
-    box-shadow: 1px 1px 3px 0px #5d4b4b;
-    padding: 5px 5px 1px 5px;
+  border: 1px solid rgb(0, 255, 247);
+  margin: 15px;
+  background: linear-gradient(to right bottom,white, rgb(123, 255, 0) 70%, rgb(0, 255, 247) 90%);
+  border-radius: 3px;
+  box-shadow: 1px 1px 3px 0px #5d4b4b;
+  padding: 5px 5px 1px 5px;
 }
 
 .book-info {
-    padding: 5px 10px 0px 10px;
+  padding: 5px 10px 0px 10px;
 }
 
 .title {
-    font-size: 20px;
-    font-weight: bolder;
+  font-size: 20px;
+  font-weight: bolder;
 }
 
 .by {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .author {
-    padding-left: 3px;
+  padding-left: 3px;
 }
 
 .pages {
-    font-size: 14px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding-left: 3px;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 3px;
 }
 
 .buttons-wrapper {
-    display: flex;
-    justify-content: space-evenly;
-    height: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  height: 30px;
 }
 
 .book-buttons {
-    width: clamp(86px, 30%, 120px);
-    padding: 4px;
-    border-radius: 4px;
-    font-weight: bold;
-    font-size: 14px;
-    color: #69ca43;
-    background: none;
-    border: none;
+  width: clamp(86px, 30%, 120px);
+  padding: 4px;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #69ca43;
+  background: none;
+  border: none;
 }
 
 .read:hover {
-    background-color: rgb(238, 236, 144);
-    color: rgb(124, 128, 0);
-    border: 2px solid rgb(200, 201, 119);
+  background-color: rgb(238, 236, 144);
+  color: rgb(124, 128, 0);
+  border: 2px solid rgb(200, 201, 119);
 }
 
 .unread:hover {
-    background-color: lightgreen;
-    color: green;
-    border: 2px solid rgb(119, 201, 119);
+  background-color: lightgreen;
+  color: green;
+  border: 2px solid rgb(119, 201, 119);
 }
 
 .remove:hover {
-    background-color: rgb(210, 169, 169);
-    color: rgb(164, 71, 71);
-    border: 2px solid rgb(201, 149, 149);
+  background-color: rgb(210, 169, 169);
+  color: rgb(164, 71, 71);
+  border: 2px solid rgb(201, 149, 149);
 }
 
 .footer {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh;
-    background-color: var(--bg-color);
-    box-shadow: 0px -20px 20px 0px rgb(215, 245, 243);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  background-color: var(--bg-color);
+  box-shadow: 0px -20px 20px 0px rgb(215, 245, 243);
 }
 
 .add {
-    transform: scale(0.5);
-    position: relative;
-    bottom: 10px;
-    cursor: pointer;
+  transform: scale(0.5);
+  position: relative;
+  bottom: 10px;
+  cursor: pointer;
+}
+
+.add-button {
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
-    .wrapper {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    }
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }  
+  .add {
+    display: none;
+  }  
+  .add-button {
+    display: block;
+    font-size: 18px;
+    padding: 6px 15px;
+    border-radius: 5px;
+    background-color: #bdfbbd;
+    border: 1px solid #5ab590;
+    position: relative;
+    bottom: 10px;
+  }  
+  .add-button:hover {
+    background-color: #b8f4b8;
+  }
 }
