--- a/style.css
+++ b/style.css
@@ -106,6 +106,12 @@ input[type='radio'] {
   font-size: 48px;
   font-weight: bolder;
   margin-left: 5px;
+  background-color: rgb(8 10 10);
+  color: transparent;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
 }
 
 .stats-toggle {
@@ -116,13 +122,16 @@ input[type='radio'] {
 }
 
 .chart {
-  background: url(/icons/chart-box-outline.png);
+  background: url(/icons/stats.png);
   background-size: contain;
 }
 
 .shelf {
-  background: url(/icons/book-open-variant.png);
+  background: url(/icons/books.png);
   background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  top: 3px;
 }
 
 .bookshelf {
