--- a/style.css
+++ b/style.css
@@ -91,6 +91,13 @@ input[type='radio'] {
   width: 100px;
 }
 
+.error::after {
+    position: relative;
+    left: 5px;
+    content: 'Book is already in library';
+    color: red;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
